[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/bg/bg.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/Spawn_pipes.gd" type="Script" id=3]
[ext_resource path="res://script/game.gd" type="Script" id=4]
[ext_resource path="res://assets/font/nokiafc22.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/music/Super Mario - Som Cl√°ssico da moeda.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/music/Super Lucky's Tale OST - Retro Road - LOOP.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/music/Super Lucky's Tale OST - Retro Road - START.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 559.303, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 528.718, 14.4093 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 670.116, -80.2623 ],
"_edit_vertical_guides_": [ 1019.8 ]
}

[node name="bg" type="Sprite" parent="."]
position = Vector2( 521.015, 297.314 )
scale = Vector2( 2.09564, 1 )
texture = ExtResource( 1 )

[node name="music_start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -1.0

[node name="music_loop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -1.0

[node name="pontuacao" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 2.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 104.989, 56.8636 )

[node name="spawn_pipes" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="spawn_pipes"]
wait_time = 1.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionTop" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 529.117, -11.6992 )
shape = SubResource( 1 )

[node name="CollisionDown" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 523.441, 606.852 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 166.051
margin_top = 23.2353
margin_right = 322.051
margin_bottom = 88.2352
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="music_start" to="." method="_on_music_start_finished"]
[connection signal="finished" from="music_loop" to="." method="_on_music_loop_finished"]
[connection signal="timeout" from="spawn_pipes/Timer" to="spawn_pipes" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
